2005-11-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/bundleclient.py:
	* flumotion/common/package.py:
	* flumotion/worker/worker.py:
	  Register package patsh without rebuilding every possible module;
	  should both work and be fast enough

2005-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/consumers/httpstreamer/http.py
	(MultifdSinkStreamer.pipe_template): Don't sync to timestamps in
	0.9.

	* flumotion/component/encoders/vorbis/vorbis08.py
	(Vorbis._start_feeders): Emit notify-feed-ports before going to
	playing -- prevents race conditions like the ones that were in
	feedcomponent08.py.

	* flumotion/manager/manager.py (Dispatcher.requestAvatar): Better
	debugging.

	* flumotion/component/component.py
	(ComponentClientFactory.gotDeferredLogin.alreadyLoggedInErrback):
	Punt on what the failure actually is...

	* flumotion/component/feedcomponent08.py (FeedComponent.link): Set
	to paused, notify ports, then play. Fixes race condition between
	component and manager.

	* flumotion/component/consumers/disker/disker.py
	(Disker.pipe_template): Use a version-dependent pipeline.

	* flumotion/component/feedcomponent09.py
	(FeedComponent.bus_watch_func): Move hacky feeder->feed munge
	here...

	* flumotion/component/feedcomponent.py
	(FeedComponentMedium.__init__.on_feed_ready): ... from here. Fixes
	0.8 feed-ready notification.

	* flumotion/component/feedcomponent08.py
	(FeedComponent.feeder_state_change_cb): Remove out of date
	comment.

2005-11-07  Julien MOUTTE  <julien@moutte.net>

	* doc/man/flumotion-worker.1: Add example for feederports.

2005-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/worker.py:
	  remove loading bundles for component until we fix CPU use

2005-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/consumers/disker/disker.py: Make it work
	with 0.9.

	* flumotion/common/boot.py.in (init_gst): Fix version check.