@@ -1,3 +1,10 @@
+<<<<<<< .mine
+2005-11-08  Andy Wingo  <wingo@pobox.com>
+
+	* flumotion/component/consumers/disker/disker.py
+	(Disker.link_setup.feeder_state_change_cb): Fix borken refactor.
+
+=======
 2005-11-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/common/bundleclient.py:
@@ -6,6 +13,7 @@
 	  Register package patsh without rebuilding every possible module;
 	  should both work and be fast enough
 
+>>>>>>> .r2447
 2005-11-07  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/component/consumers/httpstreamer/http.py
